refactor keyboard input into MappedInput to make testable

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "autoload": {
         "psr-0": {
             "Yitznewton\\TwentyFortyEight\\": "src/",
-            "Yitznewton\\TwentyFortyEight\\Tests\\": "tests/"
+            "Yitznewton\\TwentyFortyEight\\Tests\\": "tests/",
+            "Yitznewton\\TwentyFortyEight\\TestDoubles\\": "tests/"
         }
     },
     "require": {
